Updated action file with Rules.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,3 +32,4 @@ jobs:
         with:
           # Target URL
           target: "https://dotnetthoughts.net"
+          rules_file_name: ".zap/rules.tsv"
